[package]
name = "bungee"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4.9", features = ["serde", "serde-json", "serde_json"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
